--- a/assurance.html
+++ b/assurance.html
@@ -3,6 +3,7 @@
     <title>Souscription indisponible</title>
     <link rel="stylesheet" href="main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/favicon.ico">
   </head>
 
   <body>
