feat: add advices to client page

--- a/client.html
+++ b/client.html
@@ -20,10 +20,12 @@
         alt="Illustration en noir et blanc d'une femme souriante, aux longs cheveux, faisant un signe d'au revoir à travers la fenêtre ouverte d'un train qui s'éloigne. Buissons en arrière-plan."
       />
 
-      <p>
-        Le Service Client n'est plus disponible. Pour toute question concernant votre contrat,
-        envoyez un mail à <a href="mailto: moncontrat@appenin.fr">moncontrat@appenin.fr</a>.
-      </p>
+      <p>Le Service Client n'est plus disponible.</p>
+
+      <p>Pour toute question concernant un sinistre, envoyez un mail à <a href="mailto:sinistres@appenin.fr">sinistres@appenin.fr</a>.</p>
+
+      <p>Pour les autres demandes, envoyez un mail à <a href="mailto:moncontrat@appenin.fr">moncontrat@appenin.fr</a>.</p>
+
     </main>
 
     <footer>
