--- a/assurance.html
+++ b/assurance.html
@@ -33,10 +33,8 @@
 
     <footer>
       <nav class="links">
-        <a href="https://client.appenin.fr/politique-de-confidentialite" target="_blank"
-          >Politique de confidentialité</a
-        >
-        <a href="https://client.appenin.fr/mentions-legales" target="_blank">Mentions légales</a>
+        <a href="https://assurance.appenin.fr/vie-privee" target="_blank">Politique de confidentialité</a>
+        <a href="https://assurance.appenin.fr/mentions-legales" target="_blank">Mentions légales</a>
       </nav>
 
       <section class="brands">
