--- a/client.html
+++ b/client.html
@@ -30,10 +30,8 @@
 
     <footer>
       <nav class="links">
-        <a href="https://client.appenin.fr/politique-de-confidentialite" target="_blank"
-          >Politique de confidentialité</a
-        >
-        <a href="https://client.appenin.fr/mentions-legales" target="_blank">Mentions légales</a>
+        <a href="./politique-de-confidentialite.html" target="_blank">Politique de confidentialité</a>
+        <a href="./mentions-legales.html" target="_blank">Mentions légales</a>
       </nav>
 
       <section class="brands">
