--- a/assurance.html
+++ b/assurance.html
@@ -33,8 +33,8 @@
 
     <footer>
       <nav class="links">
-        <a href="https://assurance.appenin.fr/vie-privee" target="_blank">Politique de confidentialité</a>
-        <a href="https://assurance.appenin.fr/mentions-legales" target="_blank">Mentions légales</a>
+        <a href="./politique-de-confidentialite.html" target="_blank">Politique de confidentialité</a>
+        <a href="./mentions-legales.html" target="_blank">Mentions légales</a>
       </nav>
 
       <section class="brands">
