chore: fix typos in politique-de-confidentialite

--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -27,7 +27,7 @@
            <li>
               <em>Ce que nous ne faisons pas, et pourquoi&nbsp;:</em>
               <ul>
-                 <li>nous ne vendrons jamais vos données à quiconque, par principe,</li>
+                 <li>nous ne vendrons jamais vos données à quiconque, par principe.</li>
               </ul>
            </li>
            <li>
@@ -62,12 +62,12 @@
            <li>données liées à votre identification (état civil, coordonnées, nationalité, etc., concernant les assurés, souscripteurs, bénéficiaires, ou intervenants au contrat),</li>
            <li>données relatives à l’appréciation du risque, le cas échéant relatives à la situation économique (par exemple pour déterminer le montant de capital à garantir), familiale (par exemple pour identifier les bénéficiaires de la couverture), ou professionnelle (par exemple pour vous proposer un produit spécifiquement adapté aux étudiants ou non), ainsi qu’à la localisation des personnes et des biens (par exemple quel logement doit être couvert) et aux habitudes de vie (par exemple pour savoir si vous souhaitez couvrir des sports à risque),</li>
            <li>données nécessaires à la passation du contrat, son application ainsi qu’à la gestion des sinistres, y compris celles relatives à la détermination et l’évaluation des préjudices,</li>
-           <li>Données relatives au suivi de la relation commerciale.</li>
+           <li>données relatives au suivi de la relation commerciale.</li>
         </ul>
         <h4>Durée de conservation de vos données</h4>
         <p class="p-0">Vos données ne sont conservées que pendant la durée strictement nécessaire aux opérations pour lesquelles elles ont été collectées et au respect des durées de prescription légales, réglementaires et administratives.</p>
         <h4>Destinataires de vos données</h4>
-        <p class="p-0">Les personnes susceptibles d’avoir accès à vos données sont celles qui, dans le cadre de leurs attributions, on a en connaître pour l’une des raisons suivantes&nbsp;:</p>
+        <p class="p-0">Les personnes susceptibles d’avoir accès à vos données sont celles qui, dans le cadre de leurs attributions, ont à en connaître pour l’une des raisons suivantes&nbsp;:</p>
         <ul>
            <li>les personnes ayant un rôle dans la passation, la gestion ou l’exécution des contrats (Appenin, assureurs et réassureurs, délégataires, prestataires, partenaires distributeurs ou indicateurs, experts intervenant au contrat, etc.),</li>
            <li>les personnes intéressées au contrat (souscripteur, assuré, bénéficiaire, responsable ou victime d’un sinistre assuré, etc.),</li>
@@ -89,7 +89,7 @@
                  <li>s’il vous est nécessaire de disposer des données pour constater, exercer ou défendre vos droits,</li>
               </ul>
            </li>
-           <li><em>un droit d’obtenir une intervention humaine&nbsp;:</em> votre Assureur peut avoir recours à une prise de décision automatisée en vue de la souscription ou de la gestion de votre contrat pour l’évaluation du risque. Dans ce cas, vous pouvez demander quels ont été les critères déterminants de la décision auprès de votre Délégué à la protection des données. Vous pouvez vous inscrire gratuitement sur le registre d'opposition au démarchage téléphonique sur www.bloctel.gouv.fr. Dans ce cas, vous ne serez pas démarché par téléphone sauf si vous nous avez communiqué votre numéro de téléphone afin d'être recontacté ou sauf si vous êtes titulaire auprès de nous d'un contrat en vigueur.</li>
+           <li><em>un droit d’obtenir une intervention humaine&nbsp;:</em> votre Assureur peut avoir recours à une prise de décision automatisée en vue de la souscription ou de la gestion de votre contrat pour l’évaluation du risque. Dans ce cas, vous pouvez demander quels ont été les critères déterminants de la décision auprès de votre Délégué à la protection des données. Vous pouvez vous inscrire gratuitement sur le registre d'opposition au démarchage téléphonique sur <a href="https://www.bloctel.gouv.fr" target="_blank">www.bloctel.gouv.fr</a>. Dans ce cas, vous ne serez pas démarché par téléphone sauf si vous nous avez communiqué votre numéro de téléphone afin d'être recontacté ou sauf si vous êtes titulaire auprès de nous d'un contrat en vigueur.</li>
         </ul>
         <h4>Nos mesures de sécurité</h4>
         <p class="p-0">Nous mettons en œuvre les mesures techniques et organisationnelles appropriées afin de garantir un niveau de sécurité optimal, en particulier&nbsp;:</p>
@@ -102,7 +102,7 @@
         <h4>Votre interlocuteur</h4>
         <p class="p-0">Une question ? Une demande ? Écrivez-nous&nbsp;:</p>
         <ul>
-           <li>par email à&nbsp;: <a href="mailto:vie-privee@appenin.fr">vie-privee@appenin.fr</a>&nbsp;;</li>
+           <li>par email à&nbsp;: <a href="mailto:vie-privee@appenin.fr">vie-privee@appenin.fr</a>,</li>
            <li>ou bien par courrier à&nbsp;: Appenin (DPO) - 86-90 rue Saint-Lazare, 75009 Paris.</li>
         </ul>
      </section>
