--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -15,7 +15,7 @@
       <section class="layout-alt">
         <h2>Mentions légales</h2>
 
-        <h3>Qui sommes nous ?</h3>
+        <h3>Qui sommes-nous ?</h3>
 
         <p class="px-0">Le site appenin.fr (ci-après le "Site") est édité par la SAS APPENIN, au capital de 33 191 776 €, immatriculée sous le numéro 482 112 331 au Registre du Commerce et des Sociétés de Paris. Le siège social d'APPENIN est établi au 86/90 rue Saint-Lazare 75009 Paris, numéro de TVA intracommunautaire FR 75 482112331.</p>
 
@@ -36,7 +36,7 @@
         <h3>Comment nous contacter ?</h3>
 
         <ul>
-         <li>par courrier à APPENIN 86/90 rue Saint-Lazare 75009 Paris ;</li>
+         <li>par courrier à APPENIN 86/90 rue Saint-Lazare 75009 Paris,</li>
          <li>par email à l'adresse : <a href="mailto:contact@appenin.fr">contact@appenin.fr</a>.</li>
         </ul>
 
