--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <header>
-        <a href="./assurance.html"><img src="img/logo-appenin.png" width="75px" height="22px" /></a>
+        <a href="/"><img src="img/logo-appenin.png" width="75px" height="22px" /></a>
       </header>
 
       <section class="layout-alt">
