feat: change wording in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         alt="Illustration en noir et blanc d'une femme souriante, aux longs cheveux, faisant un signe d'au revoir à travers la fenêtre ouverte d'un train qui s'éloigne. Buissons en arrière-plan."
       />
 
-      <p>Le Service Client n'est plus disponible.</p>
+      <p>Appenin a cessé son activité, l'espace client n'est plus disponible.</p>
 
       <p>Pour toute question concernant un sinistre, envoyez un mail à <a href="mailto:sinistres@appenin.fr">sinistres@appenin.fr</a>.</p>
 
