--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -1,6 +1,6 @@
 <html lang="fr">
   <head>
-    <title>Souscription indisponible</title>
+    <title>Appenin</title>
     <link rel="stylesheet" href="main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/favicon.ico">
